# pool

./: LICENSE  README.md
doc/: API.md
src/: pool.h
tests/: .gitignore  CMakeLists.txt  base_tests.h  ex_dynamic_tests.h  ex_tests.h  helpers.h  iterator_tests.h  main.cpp  test_pool_dlist.cpp  test_pool_dlist_block.cpp  test_pool_list.cpp  test_pool_list_block.cpp  test_spool_dlist.cpp  test_spool_list.cpp  test_spool_list_bitset.cpp
